[fix] change code to older syntax to support Java 11